# xdave

./: .gitignore  .rodare.json  README.md  bf_dsf.py  boundfree_dsf.py  bridge_functions.py  constants.py  fermi_integrals.py  ff_dsf.py  freefree_dsf.py  fxc.py  heart_interface.py  hnc_potentials.py  ii_ff.py  ii_ssf.py  ipd.py  lfc.py  models.py  plasma_state.py  potentials.py  pyproject.toml  rayleigh_weight.py  screening_cloud.py  static_sf.py  tests.py  tests_compare_mcss_xdave.py  unit_conversions.py  utils.py  wr.py  xdave.code-workspace  xdave.py  xrdb.py
data/: binding_energies_xrdb.csv
docs/: conf.py
examples/: be_example.py  ch_example.py  check_normalization.py  hdc_example.py  heart_interface.py  hydrogen_test.py  inelastic_only_example.py  test_bf.py  test_collision_frequency.py  test_fdi.py  test_ff.py  test_form_factors.py  test_full_spectrum.py  test_ipd.py  test_lfc.py  test_plasmastate.py  test_potentials.py  test_screening_cloud.py  test_setup.py  test_sf.py  test_wr.py  tests_compare_mcss_xdave.py
mcss_tests/: pymcss.py  run_mcss_sim.py
tests/: check_normalization.py  test_bf.py  test_collision_frequency.py  test_convolution.py  test_dummy.py  test_fdi.py  test_ff.py  test_form_factors.py  test_ipd.py  test_lfc.py  test_plasmastate.py  test_potentials.py  test_screening_cloud.py  test_setup.py  test_sf.py  test_version.py  test_wr.py  tests_compare_mcss_xdave.py
visuals/: test_ff.py
xdave/: __init__.py  binding_energies.py  boundfree_dsf.py  bridge_functions.py  collision_frequency.py  constants.py  fermi_integrals.py  freefree_dsf.py  (+14 more)
(+581 files in other folders)
