[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xdave"
version = "0.0.1a0"
description = "X-Ray Diagnostics, Analysis, Verification and Exploration Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Hannah M. Bellenbaum", email = "h.bellenbaum@hzdr.de" },
    { name = "Maximilian P. Boehme", email = "boehme4@llnl.gov" },
    { name = "Thomas Gawne", email = "t.gawne@hzdr.de" },
]
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.10",
    "scipy>=1.16.2",
    "pandas>=2.2.3",
]

[tool.setuptools]
packages = ["xdave", "xdave.data"]

[tool.setuptools.package-data]
xdave = ["data/*.csv"]

[project.optional-dependencies]
test = ["pytest", "coverage"]
